config: change the capture request header separator to comma
This is to make it consistent with separator on "accept_backend".

--- a/testdata/haminer.conf
+++ b/testdata/haminer.conf
@@ -1,5 +1,5 @@
 [haminer]
 listen         = 0.0.0.0:8080
-accept_backend = a , b,
-capture_request_header = host | referrer|
+accept_backend = ,a , b,
+capture_request_header = , host, referrer,
 influxdb_api_write     = http://127.0.0.1:8086/write
