Add option to preprocess http_url

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -54,3 +54,42 @@
 ##
 
 #influxdb_api_write=
+
+##
+## Pre-process tag by substituting replacing their value using regular
+## expression.
+## Each pre-process rules is run from top to bottom, which means if we have
+## two or more rules with the same key, the output of first pre-process will
+## be used as an input # for the second rule.
+##
+## Currently only accept "http_url" as the key.
+##
+## Format
+##
+##    TAG-NAME "=" (DQUOTE regex DQUOTE) "=>" (DQUOTE replacement DQUOTE)
+##
+## Examples
+##
+##     http_url = /uuid/\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12} => /uuid/-
+##     http_url = /id/[0-9]+ => /id/-
+##
+##     This will replace "/id/1000" with "/id/-" and/or
+##     "/uuid/e7282bca-73b3-48fc-9793-6446ea6ebff3" into "/uuid/-"
+##
+## If the order of key is wrong, you may get the unexpected output.
+## For example,
+##
+##     http_url = /id/[0-9]+ => /id/-
+##     http_url = /uuid/\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12} => /uuid/-
+##
+## Given URL with UUID that contains number at beginning,
+##
+##	/uuid/9845a0b4-f4c3-4600-af13-45b5b0e61630
+##
+## will result in "/uuid/-a0b4-f4c3-4600-af13-45b5b0e61630", not "/uuid/-" as
+## you expected.
+##
+## So, please be careful on how you define the rules.
+##
+[preprocess "tag"]
+#http_url =
