--- a/testdata/haminer.conf
+++ b/testdata/haminer.conf
@@ -3,3 +3,8 @@ listen         = 0.0.0.0:8080
 accept_backend = ,a , b,
 capture_request_header = , host, referrer,
 influxdb_api_write     = http://127.0.0.1:8086/write
+
+[preprocess "tag"]
+http_url = /[0-9]+-\\w+-\\w+-\\w+-\\w+-\\w+ => /-
+http_url = /\\w+-\\w+-\\w+-\\w+-\\w+ => /-
+http_url = /[0-9]+ => /-
