haminer: change buffered mode from max size to time interval
Previously, we forward the logs only if total collected logs in buffer
is greater or equal to 10.

This commit change the model into using time interval, where the logs
will be send every N seconds (default to 15 seconds).

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -56,6 +56,14 @@
 #influxdb_api_write=
 
 ##
+## Duration, in seconds, when the logs will be forwarded.
+##
+## Format: DIGIT "s"
+## Default: "15s"
+##
+#forward_interval = 15s
+
+##
 ## Pre-process tag by substituting replacing their value using regular
 ## expression.
 ## Each pre-process rules is run from top to bottom, which means if we have
