cmd/haminer: update description of preprocess option

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -81,18 +81,16 @@
 #forward_interval = 15s
 
 ##
-## Pre-process tag by substituting replacing their value using regular
-## expression.
+## Pre-process tag by replacing its value using regular expression.
 ## Each pre-process rules is run from top to bottom, which means if we have
 ## two or more rules with the same key, the output of first pre-process will
-## be used as an input # for the second rule.
+## be used as an input for the second rule.
 ##
 ## Currently only accept "http_url" as the key.
 ##
 ## Format
 ##
-##    TAG-NAME "=" (DQUOTE regex DQUOTE) "=>" (DQUOTE replacement DQUOTE)
-##    DQUOTE    = '"' ; a double-quote
+##    TAG-NAME "=" regex "=>" replacement
 ##
 ## Examples
 ##
@@ -113,7 +111,7 @@
 ##    /uuid/9845a0b4-f4c3-4600-af13-45b5b0e61630
 ##
 ## will result in "/uuid/-a0b4-f4c3-4600-af13-45b5b0e61630", not "/uuid/-" as
-## you expected.
+## you would expected.
 ##
 ## So, please be careful on how you define the rules.
 ##
