all: update the go.mod
Set the minimum Go to 1.18 and update the share modules.

When this program written, the ini library does not have the Unmarshal
function, so we load the configuration by reading each key and parse it
manually.

Now that we have Unmarshal function, the way we parse the configuration
is simplified so does the way configuration written.
This changes the accept_backend, capture_request_header written.
Instead of using comma to set multiple values, now it must be written
one key and one value on different line.

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -4,7 +4,7 @@
 ##
 ## Format
 ##
-##    ADDR [ ":" PORT ]
+##    listen = ADDR [ ":" PORT ]
 ##
 ## Default: 127.0.0.1:5140
 ##
@@ -17,18 +17,19 @@
 #listen=
 
 ##
-## List of HAProxy backend to be accepted and forwarded to Influxdb. Each
-## backend name is separated by comma.
+## List of HAProxy backend to be accepted and forwarded to Influxdb.
+## Each accept_backend can be listed multiple times.
 ##
 ## Format
 ##
-##    [ name ] *[ "," name ]
+##    accept_backend = <string>
 ##
 ## Default: "", no filter (all backend are accepted).
 ##
 ## Examples
 ##
-##    accept_backend=api_01,api_02
+##    accept_backend=api_01
+##    accept_backend=api_02
 ##
 
 #accept_backend=
@@ -39,7 +40,7 @@
 ##
 ## Format
 ##
-##    [ name ] *["," name]
+##    capture_request_header = <string>
 ##
 ## The name should contains only alphabets and underscore.
 ##
@@ -47,7 +48,8 @@
 ##
 ## Examples
 ##
-##    capture_request_header = host , referrer
+##    capture_request_header = host
+##    capture_request_header = referrer
 ##
 
 #capture_request_header=
@@ -58,7 +60,7 @@
 ##
 ## Format
 ##
-##    http://<hostname|IP-address>:<port>/write?db=<influxdb-name>[&u=username][&p=password]
+##    influxdb_api_write = http://<hostname|IP-address>:<port>/write?db=<influxdb-name>[&u=username][&p=password]
 ##
 ## Default: "", empty. If empty the log will not forwarded to Influxdb.
 ##
@@ -74,7 +76,7 @@
 ##
 ## Format
 ##
-##    DIGIT "s"
+##    forward_interval = DIGIT "s"
 ##
 ## Default: "15s"
 ##
@@ -97,8 +99,8 @@
 ##    http_url = /uuid/\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12} => /uuid/-
 ##    http_url = /id/[0-9]+ => /id/-
 ##
-##    This will replace "/id/1000" with "/id/-" and/or
-##    "/uuid/e7282bca-73b3-48fc-9793-6446ea6ebff3" into "/uuid/-"
+## This will replace "/id/1000" with "/id/-" and/or
+## "/uuid/e7282bca-73b3-48fc-9793-6446ea6ebff3" into "/uuid/-"
 ##
 ## If the order of key is wrong, you may get the unexpected output.
 ## For example,
