--- a/testdata/haminer.conf
+++ b/testdata/haminer.conf
@@ -1,7 +1,9 @@
 [haminer]
 listen         = 0.0.0.0:8080
-accept_backend = ,a , b,
-capture_request_header = , host, referrer,
+accept_backend = a
+accept_backend = b
+capture_request_header = host 
+capture_request_header = referrer 
 influxdb_api_write     = http://127.0.0.1:8086/write
 forward_interval       = 20s
 
