all: add support for influxd API v2
This changes replace the "influxdb_api_write" with new section
`[forwarder "influxd"]`.
The section contains version, url, org, bucket, user, password, and
token.
The version field define the API version to be used when writing log
to Influxd.

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -55,23 +55,6 @@
 #capture_request_header=
 
 ##
-## The endpoint for Influxdb HTTP API write, must include database name, and
-## optional authentication in query parameters.
-##
-## Format
-##
-##    influxdb_api_write = http://<hostname|IP-address>:<port>/write?db=<influxdb-name>[&u=username][&p=password]
-##
-## Default: "", empty. If empty the log will not forwarded to Influxdb.
-##
-## Examples
-##
-##    influxdb_api_write=http://127.0.0.1:8086/write?db=haminer&u=haminer&p=haminer
-##
-
-#influxdb_api_write=
-
-##
 ## Duration, in seconds, when the logs will be forwarded.
 ##
 ## Format
@@ -119,3 +102,36 @@
 ##
 [preprocess "tag"]
 #http_url =
+
+[forwarder "influxd"]
+
+## The version of influxd to forward the log.
+## This option affect on which HTTP API will be used later.
+## Valid values are "v1" or "v2" (default).
+#version = v2
+
+## The address of influxd.
+## If its empty, the logs will not forwarded.
+##
+## Format
+##
+##    http://<hostname|IP-address>:<port>
+##
+#url =
+
+## The destination organization for writes.
+## InfluxDB writes all points in the batch to this organization.
+## For v2, this field is required.
+#org =
+
+## The bucket name where logs will be written.
+## For v1, this is equal to database name ("db" field in query parameter).
+## This field is optional, default to "haproxy"
+#bucket = haproxy
+
+## Authentication for v1.
+#user =
+#password =
+
+## Authorization for v2.
+#token =
