--- a/testdata/haminer.conf
+++ b/testdata/haminer.conf
@@ -4,7 +4,6 @@ accept_backend = a
 accept_backend = b
 capture_request_header = host 
 capture_request_header = referrer 
-influxdb_api_write     = http://127.0.0.1:8086/write
 forward_interval       = 20s
 
 [preprocess "tag"]
@@ -13,3 +12,7 @@ http_url = /[0-9]+-\\w+-\\w+-\\w+-\\w+-\\w+ => /-
 
 http_url = /\\w+-\\w+-\\w+-\\w+-\\w+ => /-
 http_url = /[0-9]+ => /-
+
+[forwarder "influxd"]
+url = http://127.0.0.1:8086
+org = kilabit.info
