all: implement forwarder for questdb
Questdb [1] is one the time-series database.
We experiment to forward the HTTP log using Influx Line Protocol (ILP).

[1]: https://questdb.io/

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -135,3 +135,22 @@
 
 ## Authorization for v2.
 #token =
+
+## The questdb forwarder define configuration to forward the log to questdb
+## instance.
+## The log is forwarded using Influxb Line Protocol (ILP) [1]
+##
+## [1]: https://questdb.io/docs/reference/api/ilp/overview
+
+[forwarder "questdb"]
+
+## The URL of questdb server in the following format,
+##
+##	$scheme "://" $ip_address [":" $port]
+##
+## The $scheme can be "udp" (default) or "tcp".
+## The $ip_address is required, define the address where questdb running.
+## The $port number is optional default to 9009.
+##
+## An empty url means the forwarder is disabled.
+url =
