all: implement forwarder for Postgresql
The Postgresql forwarder accept single option "URL",

  [forwarder "postgresql"]
  url = postgres://<user>:<pass>@<host>/<database>?sslmode=<>

The user and database must already created first, manually.

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -145,6 +145,15 @@
 ##
 ## [1]: https://questdb.io/docs/reference/api/ilp/overview
 
+[forwarder "postgresql"]
+
+## The Data Source Name of Postgresql server in the following format,
+##
+##	"postgres://$user:$pass@$host/$database?sslmode=
+##
+## An empty url means the forwarder is disabled.
+url =
+
 [forwarder "questdb"]
 
 ## The URL of questdb server in the following format,
