[wip] _wui: implement web user interface

--- a/cmd/haminer/haminer.conf
+++ b/cmd/haminer/haminer.conf
@@ -68,6 +68,10 @@
 ##
 #forward_interval = 15s
 
+## The address to serve for web user interface.
+
+#wui_address = 127.0.0.1:15140
+
 ##
 ## Pre-process tag by replacing its value using regular expression.
 ## Each pre-process rules is run from top to bottom, which means if we have
