all: add missing SPDX license to all files
Convert the old ".reuse/dep5" format to REUSE.toml format using
"reuse convert-dep5" command.

For generated files, add the ".license" file.

Using "reuse annotate ..." it automatically add empty line after
"SPDX-FileCopyrightText:", and it also put "SPDX-FileCopyrightText" above
the "SPDX-License-Identifier".

Now, this project is compliant with version 3.3 of the REUSE
Specification.

--- a/_ops/haminer-test/mkosi.extra/etc/haproxy/haproxy.cfg
+++ b/_ops/haminer-test/mkosi.extra/etc/haproxy/haproxy.cfg
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 M. Shulhan <ms@kilabit.info>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 global
     maxconn     20000
     log         127.0.0.1:5140 local0
