--- a/_AUR/Makefile
+++ b/_AUR/Makefile
@@ -1,5 +1,6 @@
-## SPDX-FileCopyrightText: 2022 M. Shulhan <ms@kilabit.info>
-## SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-FileCopyrightText: 2022 M. Shulhan <ms@kilabit.info>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 .PHONY: all release
 
