--- a/_ops/haminer-test/mkosi.extra/var/lib/postgres/data/pg_hba.conf
+++ b/_ops/haminer-test/mkosi.extra/var/lib/postgres/data/pg_hba.conf
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 M. Shulhan <ms@kilabit.info>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 # PostgreSQL Client Authentication Configuration File
 # ===================================================
 #
