--- a/testdata/haminer.conf
+++ b/testdata/haminer.conf
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2019 M. Shulhan <ms@kilabit.info>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 [haminer]
 listen         = 0.0.0.0:8080
 accept_backend = a
